[gd_scene load_steps=14 format=3 uid="uid://c0msx5qed76ww"]

[ext_resource type="Texture2D" uid="uid://cgya5lv7jm712" path="res://assets/hole.png" id="1_c5k1x"]
[ext_resource type="Script" uid="uid://b4bkldu1fmlyh" path="res://scripts/moving_spike.gd" id="1_xteka"]
[ext_resource type="Texture2D" uid="uid://cmdv2u7qvgymo" path="res://assets/long_spike_mask.png" id="2_et3gi"]
[ext_resource type="Texture2D" uid="uid://rqoti4l21cen" path="res://assets/long_spike.png" id="3_k4w0c"]
[ext_resource type="AudioStream" uid="uid://dl0683eo5am4f" path="res://assets/audio/411741__neilsher__knife-draw.wav" id="4_et3gi"]
[ext_resource type="AudioStream" uid="uid://de7twnmbl16e5" path="res://assets/audio/411741__neilsher__knife-draw_reverse.wav" id="5_k4w0c"]
[ext_resource type="Script" uid="uid://fwjpl32k4dgr" path="res://scripts/hazard.gd" id="7_bjf12"]

[sub_resource type="Animation" id="Animation_5bnsx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visualizer/Sprite2D/LongSpike:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visualizer/Sprite2D/LongSpike:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visualizer/Sprite2D/LongSpike:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visualizer/Sprite2D2/LongSpike:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 41.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visualizer/Sprite2D2/LongSpike:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visualizer/Sprite2D3/LongSpike:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 41.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:shape:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(66, 170)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -75)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k4w0c"]
resource_name = "extend"
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visualizer/Sprite2D/LongSpike:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.353333, 0.443333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 2,
"values": [Vector2(0, 340), Vector2(0, -2), Vector2(0, 8), Vector2(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visualizer/Sprite2D/LongSpike:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [Vector2(1, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visualizer/Sprite2D/LongSpike:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.0666667, 0, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 0, 0]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.1,
"stream": ExtResource("4_et3gi")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visualizer/Sprite2D2/LongSpike:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.267456, 0.356891, 0.441572),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.5, 339.5), Vector2(2.5, 41.5), Vector2(2.5, 55.5), Vector2(2.5, 41.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visualizer/Sprite2D2/LongSpike:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.232797, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 1, 0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visualizer/Sprite2D3/LongSpike:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.267428, 0.357853, 0.441545),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 345.989), Vector2(0, 5.95265), Vector2(0, 37.9674), Vector2(0, 41.5)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionShape2D:shape:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.442507),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(66, 0), Vector2(66, 170)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CollisionShape2D:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.443468, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -75), Vector2(0, -75)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.0404028),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bjf12"]
resource_name = "idle_retracted"
length = 0.1
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visualizer/Sprite2D/LongSpike:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [Vector2(0, 340)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visualizer/Sprite2D2/LongSpike:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 339.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visualizer/Sprite2D3/LongSpike:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 345.989)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(66, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -75)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xteka"]
resource_name = "retract"
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visualizer/Sprite2D/LongSpike:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 2,
"values": [Vector2(0, 4), Vector2(0, 340)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.3,
"stream": ExtResource("5_k4w0c")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visualizer/Sprite2D2/LongSpike:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.5, 41.5), Vector2(2.5, 339.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visualizer/Sprite2D3/LongSpike:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 41.5), Vector2(0, 345.989)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:shape:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.431925),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(66, 170), Vector2(66, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.432887),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -75), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xteka"]
_data = {
&"RESET": SubResource("Animation_5bnsx"),
&"extend": SubResource("Animation_k4w0c"),
&"idle_retracted": SubResource("Animation_bjf12"),
&"retract": SubResource("Animation_xteka")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mohbt"]
size = Vector2(66, 170)

[node name="MovingSpike" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_xteka")
extended_time = 2.0
retracted_time = 2.0
timer_offset = 0.3
is_active = true
is_extended = true

[node name="Visualizer" type="Node2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Spike" type="Sprite2D" parent="Visualizer"]

[node name="Hole" type="Sprite2D" parent="Visualizer"]
texture = ExtResource("1_c5k1x")

[node name="Hole2" type="Sprite2D" parent="Visualizer"]
position = Vector2(-48.5, 10.5)
texture = ExtResource("1_c5k1x")

[node name="Hole3" type="Sprite2D" parent="Visualizer"]
position = Vector2(46, 12)
texture = ExtResource("1_c5k1x")

[node name="Sprite2D" type="Sprite2D" parent="Visualizer"]
clip_children = 1
position = Vector2(0, -186)
texture = ExtResource("2_et3gi")

[node name="LongSpike" type="Sprite2D" parent="Visualizer/Sprite2D"]
texture = ExtResource("3_k4w0c")
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="Visualizer"]
clip_children = 1
position = Vector2(-54, -176)
rotation = -0.0250355
texture = ExtResource("2_et3gi")

[node name="LongSpike" type="Sprite2D" parent="Visualizer/Sprite2D2"]
position = Vector2(2.5, 41.5)
scale = Vector2(-1, 1)
texture = ExtResource("3_k4w0c")
hframes = 2

[node name="Sprite2D3" type="Sprite2D" parent="Visualizer"]
clip_children = 1
position = Vector2(46, -174)
rotation = 0.00786041
texture = ExtResource("2_et3gi")

[node name="LongSpike" type="Sprite2D" parent="Visualizer/Sprite2D3"]
position = Vector2(2.5, 41.5)
scale = Vector2(-1, 1)
texture = ExtResource("3_k4w0c")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xteka")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Hazard" type="Node2D" parent="."]
script = ExtResource("7_bjf12")
metadata/_custom_type_script = "uid://fwjpl32k4dgr"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -75)
shape = SubResource("RectangleShape2D_mohbt")

[node name="ExtendTimer" type="Timer" parent="."]
one_shot = true

[node name="RetractTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnWaitTime" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="Hazard" method="_on_touched"]
[connection signal="timeout" from="ExtendTimer" to="." method="_on_extend_timer_timeout"]
[connection signal="timeout" from="RetractTimer" to="." method="_on_retract_timer_timeout"]
[connection signal="timeout" from="SpawnWaitTime" to="." method="_on_spawn_wait_time_timeout"]
